writerfilter/Library_rtftok.mk
@@ -56,6 +56,7 @@ $(eval $(call gb_Library_add_linked_libs,rtftok,\
 	utl \
 	tl \
 	resourcemodel \
+	vcl \
 	$(gb_STDLIBS) \
 ))
 
